--- a/projects/templates/projects/base.html
+++ b/projects/templates/projects/base.html
@@ -65,7 +65,7 @@
                     <i class="fa fa-rss"></i>
                     <span>Home</span>
                 </a>
-                <a href="{% url 'competitions' %}">
+                <a href="">
                     <i class="fa fa-trophy"></i>
                     <span></span>
                     </a>
