--- a/projects/templates/projects/base.html
+++ b/projects/templates/projects/base.html
@@ -36,9 +36,9 @@
         <div class="custom-navbar-container">
             <!-- Logo -->
             <div class="custom-navbar-logo">
-                <a href="{% url 'home' %}">
+                <a href="{% url 'feed' %}">
             <!--        <img src="/static/projects/images/logo.png" alt="DevLink Logo"> -->
-                    <span class="devlink-logo">DevLink.</span>
+                    <span class="devlink-logo">DevLink</span>
 
                 </a>
             </div>
@@ -47,7 +47,7 @@
             <div class="custom-navbar-links">
                 <a href="{% url 'home' %}">
                     <i class="fa fa-home"></i>
-                    <span>Projects</span>
+                    <span>Home</span>
                 </a>
                 <a href="{% url 'network' %}">
                     <i class="fa fa-users"></i>
@@ -61,17 +61,7 @@
                     <i class="fa fa-bell"></i>
                     <span>Notifications</span>
                 </a>
-                <a href="{% url 'feed' %}">
-                    <i class="fa fa-rss"></i>
-                    <span>Home</span>
-                </a>
-                <a href="">
-                    <i class="fa fa-trophy"></i>
-                    <span></span>
-                    </a>
-                <a href="{% url 'training' %}">
-                    <i class="fa fa-graduation-cap"></i>
-                </a>
+
             </div>
 
             <!-- Profile Dropdown -->
